--- a/main_custom.css
+++ b/main_custom.css
@@ -132,6 +132,7 @@
     transform: scale(1.3) !important;
     border: #fff 2px solid;
     border-radius: 50%;
+    box-shadow: 5px 5px 7.5px #0000003d, 5px 0px 7.5px #0000002e, 0px 3.75px 10px #0000006e !important;
 }
 .menuItemTitle {
     font-size: 0!important;
@@ -530,4 +531,23 @@ input:checked+.sliderSml::before {
     right: -50000px;
     padding-left: 20px;
     border-radius: 0 0 0 6px;
+}
+#instructionsUpdate {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%,-50%);
+    z-index: 9;
+    color: rgba(255,255,255,.8);
+    font-size: 32px;
+    background-color: #282929;
+    padding: 5px;
+    width: 600px;
+    border-radius: 25px;
+    border: #fff 4px solid;
+}
+.menuItem:hover {
+    transform: scale(1.2) !important;
 }
